// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`start a new game reducer should handle ADD_AUDIENCE request 1`] = `
Object {
  "currentGame": Object {
    "audienceSize": 0,
    "currentQuestion": 0,
    "currentRound": "ROUND_ONE",
    "currentState": "",
    "players": Array [],
    "rounds": Array [
      Object {
        "id": 1,
        "questions": Array [
          Object {
            "answers": Array [
              Object {
                "answer": "",
                "audienceVotes": 0,
                "name": "",
                "score": 0,
                "votes": Array [
                  Object {
                    "name": "",
                  },
                ],
              },
            ],
            "content": "",
            "type": "",
          },
        ],
        "scoreMultiplier": 1,
        "title": "Round One",
        "type": "",
      },
    ],
  },
  "gameId": 0,
  "initialized": false,
}
`;

exports[`start a new game reducer should handle ADD_PLAYER request 1`] = `
Object {
  "currentGame": Object {
    "audienceSize": 0,
    "currentQuestion": 0,
    "currentRound": 0,
    "currentState": "",
    "players": Array [
      Object {
        "name": undefined,
        "totalScore": 0,
        "vip": true,
      },
    ],
    "rounds": Array [
      Object {
        "id": 1,
        "questions": Array [
          Object {
            "answers": Array [
              Object {
                "answer": "",
                "audienceVotes": 0,
                "name": "",
                "score": 0,
                "votes": Array [
                  Object {
                    "name": "",
                  },
                ],
              },
            ],
            "content": "",
            "type": "",
          },
        ],
        "scoreMultiplier": 1,
        "title": "Round One",
        "type": "",
      },
    ],
  },
  "gameId": 0,
  "initialized": false,
}
`;

exports[`start a new game reducer should handle INIT_GAME request 1`] = `
Object {
  "currentGame": Object {
    "currentState": "ADDING_PLAYERS",
  },
  "gameId": 0,
  "initialized": false,
}
`;

exports[`start a new game reducer should handle ROUND_ONE request 1`] = `
Object {
  "currentGame": Object {
    "audienceSize": 0,
    "currentQuestion": 0,
    "currentRound": "ROUND_ONE",
    "currentState": "",
    "players": Array [],
    "rounds": Array [
      Object {
        "id": 1,
        "questions": Array [
          Object {
            "answers": Array [
              Object {
                "answer": "",
                "audienceVotes": 0,
                "name": "",
                "score": 0,
                "votes": Array [
                  Object {
                    "name": "",
                  },
                ],
              },
            ],
            "content": "",
            "type": "",
          },
        ],
        "scoreMultiplier": 1,
        "title": "Round One",
        "type": "",
      },
    ],
  },
  "gameId": 0,
  "initialized": false,
}
`;

exports[`start a new game reducer should handle START_TUTORIAL request 1`] = `
Object {
  "currentGame": Object {
    "audienceSize": 0,
    "currentQuestion": 0,
    "currentRound": "TUTORIAL_ROUND",
    "currentState": "",
    "players": Array [],
    "rounds": Array [
      Object {
        "id": 1,
        "questions": Array [
          Object {
            "answers": Array [
              Object {
                "answer": "",
                "audienceVotes": 0,
                "name": "",
                "score": 0,
                "votes": Array [
                  Object {
                    "name": "",
                  },
                ],
              },
            ],
            "content": "",
            "type": "",
          },
        ],
        "scoreMultiplier": 1,
        "title": "Round One",
        "type": "",
      },
    ],
  },
  "gameId": 0,
  "initialized": false,
}
`;

exports[`start a new game reducer should return handle the APP INITIALIZED request 1`] = `
Object {
  "currentGame": Object {
    "audienceSize": 0,
    "currentQuestion": 0,
    "currentRound": 0,
    "currentState": "",
    "players": Array [],
    "rounds": Array [
      Object {
        "id": 1,
        "questions": Array [
          Object {
            "answers": Array [
              Object {
                "answer": "",
                "audienceVotes": 0,
                "name": "",
                "score": 0,
                "votes": Array [
                  Object {
                    "name": "",
                  },
                ],
              },
            ],
            "content": "",
            "type": "",
          },
        ],
        "scoreMultiplier": 1,
        "title": "Round One",
        "type": "",
      },
    ],
  },
  "gameId": 0,
  "initialized": true,
}
`;

exports[`start a new game reducer should return the initialized state; testing the default 1`] = `
Object {
  "currentGame": Object {
    "audienceSize": 0,
    "currentQuestion": 0,
    "currentRound": 0,
    "currentState": "",
    "players": Array [],
    "rounds": Array [
      Object {
        "id": 1,
        "questions": Array [
          Object {
            "answers": Array [
              Object {
                "answer": "",
                "audienceVotes": 0,
                "name": "",
                "score": 0,
                "votes": Array [
                  Object {
                    "name": "",
                  },
                ],
              },
            ],
            "content": "",
            "type": "",
          },
        ],
        "scoreMultiplier": 1,
        "title": "Round One",
        "type": "",
      },
    ],
  },
  "gameId": 0,
  "initialized": false,
}
`;
